# oj-eval-codex-064-20260407171555

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  code  submit_log.json
src/: main.cpp
